# EdgeAuth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/edgeauth-api/: Cargo.toml
crates/edgeauth-api/src/: lib.rs  schema.rs  state.rs
crates/edgeauth-infra/: Cargo.toml
crates/edgeauth-infra/src/: audit.rs  clock.rs  error.rs  jwks.rs  lib.rs  service.rs
crates/edgeauth-node/: Cargo.toml
crates/edgeauth-node/src/: config.rs  demo.rs  lib.rs  main.rs  mint.rs  startup.rs
crates/edgeauth-node/tests/: graphql_flow.rs
crates/edgeauth-resilience/: Cargo.toml
crates/edgeauth-resilience/src/: lib.rs
crates/edgeauth-types/: Cargo.toml
crates/edgeauth-types/src/: credential.rs  did.rs  error.rs  jwt.rs  lib.rs  outcome.rs  policy.rs
crates/edgeauth-verifier/: Cargo.toml
crates/edgeauth-verifier/benches/: verify.rs
crates/edgeauth-verifier/src/: lib.rs
crates/edgeauth-wasm/: Cargo.toml
crates/edgeauth-wasm/src/: lib.rs
monitoring/: prometheus.yml
postman/: EdgeAuth.postman_collection.json
