[package]
name = "edgeauth-api"
description = "async-graphql schema (queries, mutations, subscriptions) exposing the EdgeAuth verification service over HTTP, plus the axum router with a GraphQL playground and websocket subscriptions."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[dependencies]
edgeauth-types = { workspace = true }
edgeauth-verifier = { workspace = true }
edgeauth-infra = { workspace = true }
edgeauth-resilience = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
