[package]
name = "edgeauth-node"
description = "EdgeAuth composition root and binary: wires the verifier, JWKS provider, audit sink and GraphQL API into a runnable native server, plus `demo` and offline `verify` subcommands."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lib]
name = "edgeauth_node"
path = "src/lib.rs"

[[bin]]
name = "edgeauth-node"
path = "src/main.rs"

[dependencies]
edgeauth-types = { workspace = true }
edgeauth-verifier = { workspace = true }
edgeauth-infra = { workspace = true }
edgeauth-api = { workspace = true }
edgeauth-resilience = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
edgeauth-types = { workspace = true }
async-graphql = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
