[package]
name = "edgeauth-types"
description = "Pure, wasm-safe domain types for EdgeAuth: EdDSA JWT/JWKS, did:key Verifiable Credentials, trust policy, and verification outcomes. No async runtime, no I/O, no randomness."
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
